tests/analyze/parse-recover-two-bad-defs/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Unexpected token (keyword `alias`). Expected an identifier.
> 3 | def alias = 0
          ^^^^^

error: Unexpected token (keyword `trait`). Expected an identifier.
> 4 | def trait = 1
          ^^^^^

